# libqd

./: .gitignore  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  config.status  configure  configure.ac  qd-config  qd-config.in  qd.pc.in  qd_2.1.142.orig.tar.gz.delta  qd_2.1.142.orig.tar.gz.id  qd_2.1.200.orig.tar.gz.delta  qd_2.1.200.orig.tar.gz.id  qd_2.3.11.dfsg.orig.tar.gz.delta  qd_2.3.11.dfsg.orig.tar.gz.id  qd_2.3.4.orig.tar.gz.delta  qd_2.3.4.orig.tar.gz.id  qd_2.3.7.orig.tar.gz.delta  qd_2.3.7.orig.tar.gz.id
.github/workflows/: tests.yml
2.1.142-1/: qd_2.1.142-1.dsc
2.1.200-1/: qd_2.1.200-1.dsc
2.1.200-1build1/: qd_2.1.200-1build1.dsc
2.3.11.dfsg-1/: qd_2.3.11.dfsg-1.dsc
2.3.11.dfsg-2/: qd_2.3.11.dfsg-2.dsc
2.3.11.dfsg-2.1/: qd_2.3.11.dfsg-2.1.dsc
2.3.11.dfsg-2.1ubuntu1/: qd_2.3.11.dfsg-2.1ubuntu1.dsc
2.3.11.dfsg-2.2/: qd_2.3.11.dfsg-2.2.dsc
2.3.11.dfsg-2.2ubuntu1/: qd_2.3.11.dfsg-2.2ubuntu1.dsc
2.3.11.dfsg-2.3/: qd_2.3.11.dfsg-2.3.dsc
2.3.11.dfsg-2build1/: qd_2.3.11.dfsg-2build1.dsc
2.3.11.dfsg-2build2/: qd_2.3.11.dfsg-2build2.dsc
2.3.17.dfsg-1/: qd_2.3.17.dfsg-1.dsc
2.3.18+dfsg-1/: qd_2.3.18+dfsg-1.dsc
2.3.18+dfsg-2/: qd_2.3.18+dfsg-2.dsc
2.3.20+dfsg.1-1/: qd_2.3.20+dfsg.1-1.dsc
2.3.20+dfsg.1-1build1/: qd_2.3.20+dfsg.1-1build1.dsc
2.3.22+dfsg.1-2/: qd_2.3.22+dfsg.1-2.dsc
2.3.22+dfsg.1-3/: qd_2.3.22+dfsg.1-3.dsc
2.3.22+dfsg.1-3build1/: qd_2.3.22+dfsg.1-3build1.dsc
2.3.23+dfsg.1-1/: qd_2.3.23+dfsg.1-1.dsc
2.3.4-1/: qd_2.3.4-1.dsc
2.3.7-1/: qd_2.3.7-1.dsc
2.3.7-1ubuntu1/: qd_2.3.7-1ubuntu1.dsc
2.3.7-2/: qd_2.3.7-2.dsc
2.3.7-2.1/: qd_2.3.7-2.1.dsc
2.3.7-2ubuntu1/: qd_2.3.7-2ubuntu1.dsc
autom4te.cache/: ._traces.2
config/: ._config.guess  ._config.sub  Makefile.in  autogen.sh  makedist.sh
debian/: README.Debian  README.source  changelog  control  copyright  libqd-dev.docs  libqd-dev.examples  libqd-dev.fortran-mod  libqd-dev.install  libqd-dev.manpages  libqd.substvars  libqd0v5.install  libqd0v5.lintian-overrides  libqd2.1.142.install  libqd2c2a.install  qd-config.1  rules  watch
debian/patches/: autoconf.patch  fix-pdf-build.patch  gxx43.patch  include-docs.patch  missing-changelog.patch  pkglibdir.patch  series  sh4.patch  workaround-on-ppc64el-to-fix-qd_test-clo.patch
docs/: Makefile.am  Makefile.in  qd.ps  qd.tex
fortran/: Makefile.am  Makefile.in  ddmod.f90  fortran_test.f90  main.cpp  qdmod.f90  tquaderq.f90  tquaderq2d.f90  tquadgsq.f90  tquadtsq.f90  tquadtsq2d.f90
fortran/.deps/: f_dd.Plo  f_qd.Plo  main.Plo
include/: Makefile.am  Makefile.in
include/qd/: ._qd_inline.h  bits.h  dd.h  dd_inline.h  inline.h  qd.h  qd_config.h.in  qd_inline.h
m4/: acx_cxx_fc_lib.m4  acx_fc_etime.m4
src/: ._dd_real.cpp  ._qd_real.cpp  Makefile.am  Makefile.in  bits.cpp  c_dd.cpp  c_qd.cpp  dd.cpp  f_dd.cpp  f_qd.cpp  qd.cpp  qd_const.cpp  util.cpp
src/.deps/: bits.Plo  c_dd.Plo  c_qd.Plo  dd_const.Plo  dd_real.Plo  fpu.Plo  qd_const.Plo  qd_real.Plo  util.Plo
src/.libs/: libqd.lai
tests/: Makefile.am  Makefile.in  pslq.h  pslq_test.cpp  qd_test.cpp  qd_timer.cpp  timer.cpp  timer.h
